--- a/config/database.yml
+++ b/config/database.yml
@@ -48,8 +48,19 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
+#初期設定
+#production:
+#  <<: *default
+#  database: atp2_production
+#  username: atp2
+#  password: <%= ENV['ATP2_DATABASE_PASSWORD'] %>
+
 production:
   <<: *default
+  adapter: mysql2
   database: atp2_production
-  username: atp2
-  password: <%= ENV['ATP2_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
+
