--- a/config/database.yml
+++ b/config/database.yml
@@ -14,9 +14,18 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: 0000 
+  password:  
   host: localhost
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /tmp/mysql.sock
+
+
+# default: &default
+#   adapter: postgresql
+#   encoding: utf8
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   username: postgres
+#   password: 0000
+#   host: localhost  
   
 
 development:
