--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,5 +7,6 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  port: 6379
+  url: redis://<%= ENV['REDIS_HOST'] %>
   # channel_prefix: my_app_production
