--- a/config/cable.yml
+++ b/config/cable.yml
@@ -10,6 +10,6 @@ production:
   port: 6379
   url: redis://<%= ENV['REDIS_HOST'] %>
   log_tags: [ActionCable]
-  connection_identifiers: [ActionCable::Connection::IdentifierCookie] # Cookieによる識別子の使用
-  connection_throttle: 0 # クライアントごとの接続の制限を無効化（開発環境以外では推奨）
+  # connection_identifiers: [ActionCable::Connection::IdentifierCookie] # Cookieによる識別子の使用
+  # connection_throttle: 0 # クライアントごとの接続の制限を無効化（開発環境以外では推奨）
   # channel_prefix: my_app_production
