--- a/config/cable.yml
+++ b/config/cable.yml
@@ -8,8 +8,5 @@ test:
 production:
   adapter: redis
   port: 6379
-  url: redis://<%= ENV['REDIS_HOST'] %>:<%= ENV['REDIS_PORT'] %>
+  url: redis://clustercfg.atp2.0sxhbm.apne1.cache.amazonaws.com:6379
   log_tags: [ActionCable]
-  # connection_identifiers: [ActionCable::Connection::IdentifierCookie] # Cookieによる識別子の使用
-  # connection_throttle: 0 # クライアントごとの接続の制限を無効化（開発環境以外では推奨）
-  # channel_prefix: my_app_production
