--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY="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"
 REDIS_HOST="clustercfg.atp2.0sxhbm.apne1.cache.amazonaws.com:6379"
 REDIS_PORT="6379"
