--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "flatpickr": "^4.6.13",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.4",
+    "nouislider": "^15.7.1",
     "turbolinks": "^5.2.0",
     "uuid": "^8.3.2",
     "webpack": "^4.46.0",
